fix/FCM-config
fix/remove-secret-file